--- a/Proyecto 2/Proyecto2_V2.ipynb
+++ b/Proyecto 2/Proyecto2_V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "b7b14b01",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "b4fec8e1",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "617d96b2",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68932/971501995.py:5: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "/tmp/ipykernel_23616/971501995.py:5: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['Time_Stamp'] = pd.to_datetime(df['Time_Stamp'], dayfirst=True)\n"
      ]
     },
@@ -103,7 +103,7 @@
        "2024-11-28 01:44:00    99.933740"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "26a1dfd5",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "2025-04-29 10:30:00   270.217072"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "c7298e8c",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "d81c8857",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "2024-12-02  48712.132305"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "94147b6a",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "<Axes: title={'center': 'Consumo diario de materias primas'}, xlabel='Time_Stamp'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "364498ec",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "1bb8d015",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "Text(0.5, 1.0, 'Histograma de PV_Final (filtrado)')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "92f10e63",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "2024-12-02  48712.132305"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "979d99ff",
    "metadata": {},
    "outputs": [
@@ -461,67 +461,67 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_68932/347331424.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_23616/347331424.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -677,7 +677,7 @@
        "2024-12-13  41793.329006  41345.731658  48712.132305  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "9a52b42d",
    "metadata": {},
    "outputs": [],
@@ -707,17 +707,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "a6fc19ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb23dad1370>"
+       "<matplotlib.legend.Legend at 0x7f0b8513c1a0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "014886c2",
    "metadata": {},
    "outputs": [],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "0372b3ea",
    "metadata": {},
    "outputs": [],
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "7f78aeaf",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "f817e9e2",
    "metadata": {},
    "outputs": [
@@ -876,7 +876,7 @@
        "0.5947204097120741"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "3757fa11",
    "metadata": {},
    "outputs": [
@@ -895,17 +895,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68932/4074096641.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
+      "/tmp/ipykernel_23616/4074096641.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
       "  plt.plot(y_test.index, y_pred_xgb, label='Predicción', color='red')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb23d5592b0>"
+       "<matplotlib.legend.Legend at 0x7f0bd5bd9b80>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "d7da738f",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68932/3838457710.py:19: FutureWarning: \n",
+      "/tmp/ipykernel_23616/3838457710.py:19: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "d8662c3a",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "3cf76a95",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        "0.6109976827398269"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "3d30fb92",
    "metadata": {},
    "outputs": [
@@ -1086,17 +1086,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68932/3134252426.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
+      "/tmp/ipykernel_23616/3134252426.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
       "  plt.plot(y_test.index, y_pred_dt, label='Predicción', color='red')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb23d3d15e0>"
+       "<matplotlib.legend.Legend at 0x7f0bcbf56990>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "658b24bd",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "3a932a3f",
    "metadata": {},
    "outputs": [
@@ -1207,13 +1207,76 @@
        "0.542087688362128"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mape_test_gb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0b0ae984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['modelo_gb.pkl']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Guardar el mejor modelo encontrado en el RandomizedSearchCV\n",
+    "joblib.dump(model_gb.best_estimator_, \"modelo_gb.pkl\")\n",
+    "# Cargar el modelo guardado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "87b190e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo subido a s3://udem-proyecto2/modelos/modelo_gb.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "\n",
+    "load_dotenv(dotenv_path='conf.env')\n",
+    "\n",
+    "# Obtener las credenciales de las variables de entorno\n",
+    "aws_access_key_id = os.getenv('AWS_ACCESS_KEY_ID')\n",
+    "aws_secret_access_key = os.getenv('AWS_SECRET_ACCESS_KEY')\n",
+    "\n",
+    "# Inicializar cliente de S3\n",
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "# Datos de tu bucket y nombre del archivo\n",
+    "bucket_name = 'udem-proyecto2'\n",
+    "s3_path = 'modelos/modelo_gb.pkl'\n",
+    "\n",
+    "# Subida a S3\n",
+    "s3.upload_file('modelo_gb.pkl', bucket_name, s3_path)\n",
+    "\n",
+    "print(f\"Modelo subido a s3://{bucket_name}/{s3_path}\")\n"
    ]
   },
   {
