--- a/Proyecto 2/Proyecto2_V2.ipynb
+++ b/Proyecto 2/Proyecto2_V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b7b14b01",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b4fec8e1",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "617d96b2",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23616/971501995.py:5: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "/tmp/ipykernel_51569/971501995.py:5: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['Time_Stamp'] = pd.to_datetime(df['Time_Stamp'], dayfirst=True)\n"
      ]
     },
@@ -103,7 +103,7 @@
        "2024-11-28 01:44:00    99.933740"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "26a1dfd5",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "2025-04-29 10:30:00   270.217072"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c7298e8c",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d81c8857",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "2024-12-02  48712.132305"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "94147b6a",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "<Axes: title={'center': 'Consumo diario de materias primas'}, xlabel='Time_Stamp'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "364498ec",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1bb8d015",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "Text(0.5, 1.0, 'Histograma de PV_Final (filtrado)')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "92f10e63",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "2024-12-02  48712.132305"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "979d99ff",
    "metadata": {},
    "outputs": [
@@ -461,67 +461,67 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_filtrado['PV_Final-'+str(i)] = df_filtrado['PV_Final'].shift(i)\n",
-      "/tmp/ipykernel_23616/347331424.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_51569/347331424.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -677,7 +677,7 @@
        "2024-12-13  41793.329006  41345.731658  48712.132305  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "9a52b42d",
    "metadata": {},
    "outputs": [],
@@ -707,17 +707,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a6fc19ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0b8513c1a0>"
+       "<matplotlib.legend.Legend at 0x7f096241bad0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "014886c2",
    "metadata": {},
    "outputs": [],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "0372b3ea",
    "metadata": {},
    "outputs": [],
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "7f78aeaf",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "f817e9e2",
    "metadata": {},
    "outputs": [
@@ -876,7 +876,7 @@
        "0.5947204097120741"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "3757fa11",
    "metadata": {},
    "outputs": [
@@ -895,17 +895,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23616/4074096641.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
+      "/tmp/ipykernel_51569/4074096641.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
       "  plt.plot(y_test.index, y_pred_xgb, label='Predicción', color='red')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0bd5bd9b80>"
+       "<matplotlib.legend.Legend at 0x7f0962450a70>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "d7da738f",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23616/3838457710.py:19: FutureWarning: \n",
+      "/tmp/ipykernel_51569/3838457710.py:19: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "d8662c3a",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "3cf76a95",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        "0.6109976827398269"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "3d30fb92",
    "metadata": {},
    "outputs": [
@@ -1086,17 +1086,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23616/3134252426.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
+      "/tmp/ipykernel_51569/3134252426.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
       "  plt.plot(y_test.index, y_pred_dt, label='Predicción', color='red')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0bcbf56990>"
+       "<matplotlib.legend.Legend at 0x7f0953fc8f80>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "658b24bd",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "3a932a3f",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1207,7 @@
        "0.542087688362128"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,6 +1239,32 @@
     "# Guardar el mejor modelo encontrado en el RandomizedSearchCV\n",
     "joblib.dump(model_gb.best_estimator_, \"modelo_gb.pkl\")\n",
     "# Cargar el modelo guardado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b771ff3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10.10487902, 10.01521406, 10.04211521, 10.08758958,  9.91569379,\n",
+       "        9.99477307, 10.24463766, 10.05358224,  9.93089032, 10.03981323,\n",
+       "       10.09623299,  9.93016638, 10.06976348,  9.6308564 , 10.17859216,\n",
+       "       10.10837076, 10.00004001,  9.82268799, 10.05615611, 10.07132312,\n",
+       "        9.97802899, 10.0409999 , 10.09220718, 10.00962099, 10.07253037,\n",
+       "        9.5809842 ,  9.6609183 , 10.14690175, 10.08386797,  9.81022244])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_gb.predict(X_test_log)"
    ]
   },
   {
@@ -1281,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "id": "59dd59d4",
    "metadata": {},
    "outputs": [
@@ -1289,17 +1315,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_68932/523898098.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
+      "/tmp/ipykernel_51569/523898098.py:4: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter\n",
       "  plt.plot(y_test.index, y_pred_gb, label='Predicción', color='red')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb23d175580>"
+       "<matplotlib.legend.Legend at 0x7f090beac950>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
